--- a/Models/SpeechLM/2024.12.24_SpeechSSM.md
+++ b/Models/SpeechLM/2024.12.24_SpeechSSM.md
@@ -67,6 +67,41 @@ We release examples at https://google.github.io/tacotron/publications/speechssm/
 
 ## 2·Related Works: 相关工作
 
+### Generating with Spoken LMs
+
+The family of GSLM models \cite{lakhotia2021generative} is a Transformer decoder LM trained on discrete units obtained from $k$-means clustering of HuBERT \cite{hsu2021hubert} features.
+Reconstruction involved a unit-to-spectrogram model whose outputs are then synthesized with a pre-trained neural spectrogram vocoder, though this was later simplified to a unit-to-waveform GAN \cite{kharitonov2022-pgslm}.
+Finding this approach gave promising temporal coherence but poor audio quality, AudioLM \cite{borsos2023audiolm} proposed learning separate LMs, one for semantic tokens as before, and two for modeling coarse-to-fine acoustic tokens conditional on a prefix of fine acoustic and semantic tokens, where acoustic tokens are the hierarchical discrete codes of a neural audio codec (SoundStream; \citealp{zeghidour2021soundstream}).
+The acoustic stages were later simplified and made non-autoregressive by SoundStorm \cite{borsos2023soundstorm}.
+
+TWIST \cite{hassid2023textually} found that initializing with a text LM improved content-level semantic coherence, atop which VoxtLM \citep{maiti2023voxtlm} and Spirit LM \citep{nguyen2024spirit} found that joint and interleaved training with text gave further improvements.
+However, all these works evaluated 10s generations, with only Spirit LM releasing (but not assessing) a generation above 30s.
+Though models with two speech channels and models that sample text intermediates are out of scope, we note that dGSLM \cite{nguyen2023generative} generated 90s dialogues given 30s prompts, though its semantic and human evaluations were restricted to 50-word or 20s continuations, and Moshi \citep{defossez2024moshi} extends two-channel models with hierarchical sampling via time-aligned text tokens to give 5-minute dialogue interactions.
+
+### State-Space Models for Long-Form Audio
+
+State-space models (SSMs; \citealp{gu2021combining}) have become popular among efficient (sub-quadratic) replacements for Transformer-based architectures, giving the first model (S4; \citealp{gu2021efficiently}) to perform all tasks in the Long-Range Arena \citep{tay2021-lra}, outperforming the vanilla Transformer.
+They utilize constant computation and memory requirements to generate tokens during inference and can be efficiently trained.
+Recent focus has shifted to hybrid models \cite{glorioso2024zamba, lieber2024jamba, de2024griffin} which integrate state-space layers and variants like linear recurrent units (LRU; \citealp{orvieto2023-lru}) with finite-context self-attention layers.
+
+Recent works have considered SSMs in audio, primarily to support long speech \textit{inputs} for text-out tasks like automatic speech recognition (ASR) and summarization.
+None are spoken LMs for speech continuation, with only one considering (acoustic-level) tokens \citep{gao2024speech}; most works involve spectrogram encoders or outputs \cite{shams2024ssamba, erol2024audio, lin2024audio, miyazaki2024exploring}.
+Closest in spirit is SaShiMi \citep{goel2022s}, a multi-scale S4 operating directly on waveform samples; though they generate only 1s of speech, this corresponds to a sequence of 16k scalars.
+For music, they also study generation-time extrapolation from 8s to 16s.
+One can view our work as a difference in scale, with tokens instead of samples as the unit (our 16-min generation corresponds to a sequence of 24k token IDs).
+
+### Evaluating Spoken LM Generations
+
+\citet{lakhotia2021generative} was first to evaluate the generations of spoken LMs, proposing ASR as a path to automated text metrics like text perplexity (PPL) and proportion of repeated $k$-grams (auto-BLEU), along with human evaluations of intelligibility and meaningfulness with mean opinion scores (MOS and MMOS respectively).
+For their spoken LMs, zero-shot (non-generative) metrics based on logprobs of contrastive pairs (sWUGGY and sBLIMP; \citealp{nguyen2020zero}) were predictive of generation performance, though they note scores vary with token vocabulary size.
+
+However, these initial metrics seem to lack robustness or are saturating with respect to newer spoken LMs.
+\citet{hassid2023textually} found transcript PPL and auto-BLEU to be noisy, favoring MMOS and expanding zero-shot metrics (sStoryCloze and tStoryCloze).
+In turn, \citet{defossez2024moshi} found that performance on zero-shot sWUGGY and sBLIMP metrics degraded despite continued experiential improvement from noisy-condition training and instruction-tuning, instead favoring spoken question answering (SQA) tasks \citep{nachmani2023spoken} evaluated via ASR.
+Closest to our work was the use of LLMs to assign absolute, reference-free scores to assess the instruction following of turn-based text-and-speech LMs in \citet{zhang2023speechgpt, zhang2024speechagents}.
+
+As for saturation, \citet{borsos2023audiolm} found that humans could not distinguish between a synthetic 7s continuation versus the real 7s continuation of a 3s prompt on a holistic side-by-side evaluation, suggesting the need for more targeted and longer-form evaluations.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
