--- a/Models/SpeechLM/2024.12.24_SpeechSSM.md
+++ b/Models/SpeechLM/2024.12.24_SpeechSSM.md
@@ -104,6 +104,42 @@ As for saturation, \citet{borsos2023audiolm} found that humans could not disting
 
 ## 3·Methodology: 方法
 
+### Unbounded Speech Generation
+
+We begin by proposing a set of requirements for a general, unbounded, speech generation system:
+
+- \textbf{Constant memory during decoding}, to enable indefinite AR sampling without running out of memory.
+- \textbf{Infinite context}, so that arbitrarily distant dependencies can be (theoretically) expressed. To be concurrent with the above, necessary past context must fit in a fixed-size state.
+- \textbf{Generative length extrapolation}, so that speech quality remains consistent over time, in particular beyond audio durations seen during training.
+
+The first leads us to linear-complexity sequence modeling with a fixed-size state. The second leads us to models with aggregation mechanisms such as recurrences or compressive memories. We show that with some care, one can also achieve the third requirement of generative extrapolation. Finally, beyond these requirements, there is also a practical desire for efficient training (e.g., train-time dependence on sequence length that is subquadratic, to enable longer sequences and reduce reliance on extrapolation), requiring a parallel scheme for weight learning. This leads us to state-space models, broadly defined (i.e., including linear recurrence models and certain hybrid variants; \citealp{patro2024mamba360, dao2024transformers}) and thus SpeechSSM, a hybrid state-space speech language model for efficient long-form speech generation that fulfills all these desiderata. Our key design choices are below.
+
+#### Architecture
+
+For our decoder-only hybrid SSM we choose Griffin \cite{de2024griffin}, which interleaves a gated variant of LRUs \cite{orvieto2023-lru} and local (sliding-window) multi-query attention (MQA) blocks in a fixed pattern (two recurrent, one local-MQA; see \Cref{fig:architecture}, left). Local attention efficiently captures recent context, while the states of the gated recurrences transmit information across arbitrary distances. Griffin's performance matched that of comparable Transformer LMs while significantly improving inference speed and enabling context-side extrapolation of at least 4x longer than seen in training. Observing that RoPE \cite{su2024roformer} in the local-MQA blocks still encodes absolute position, we follow recent work on position embeddings (PEs) under causal self-attention (NoPE; \citealp{kazemnejad2024impact}) and remove all explicit PEs from SpeechSSM to promote extrapolation.
+
+#### Initialization
+
+Inspired by \citet{hassid2023textually}'s success with text-initialized spoken language models (TWIST), we initialize our model with RecurrentGemma-2B IT \cite{botev2024recurrentgemma}, an open-weight LM with the Griffin architecture, trained on 2 trillion text tokens. We discard the pretrained text token embeddings and initialize new ones for our audio token vocabulary.
+
+Following \citet{borsos2023audiolm}, we generate low-level acoustic tokens of a neural audio codec, conditioned on semantic tokens output from our SpeechSSM.
+
+#### Semantic Tokenizer
+
+We use the pretrained USM-v2 speech tokenizer \citep{vashishth2024stab, rubenstein2023audiopalm} to give our semantic tokens. The USM speech encoder \citep{zhang2023-usm} is trained with a masked language model (MLM) loss on untranscribed audio and an auxiliary automatic speech recognition (ASR) objective on transcribed audio. Then, its intermediate embeddings are discretized using vector quantization to give 32k units that serve as fixed-rate (25Hz, or 40ms/token) pseudo-text for our speech LM. \citet{vashishth2024stab} found that USM-v2 was by far the most speaker-invariant token out of a suite of common speech tokenizers.
+
+#### Semantic-to-Acoustic Generation
+
+We use a SoundStorm model \cite{borsos2023soundstorm} trained with USM-v2 conditioning to non-autoregressively generate SoundStream tokens \cite{zeghidour2021soundstream}, a neural audio codec that efficiently reconstructs to high-quality audio. It is trained to support 3-second voice prompts (represented as a frozen prefix of semantic and acoustic tokens), such that output acoustic tokens reflect speaker characteristics. By choosing a token and model decomposition that isolates speaker characteristics to the acoustic stage, SpeechSSM can focus capacity on modeling semantic coherence along the temporal axis.
+
+#### Windowed Tokenization and Decoding
+
+To process long-form speech while bounding the memory requirements of the (non-SSM) semantic tokenizer and acoustic decoder, we employ an overlapping window approach. Specifically, the audio is divided into 30-second segments, with an overlap of 4 seconds with its neighboring segments. Each 30-second window is tokenized independently. Then, the windows are merged into a continuous stream by taking, at each overlap the first two seconds of boundary tokens from the preceding window and the last two seconds of tokens from the succeeding window (\Cref{fig:windowing}a). Likewise, during decoding, the 30-second token windows are decoded independently, then merged with the same boundary overlap adjustment (\Cref{fig:windowing}b). Although windowing operates at the audio level and merging occurs at the token level (and vice versa), we qualitatively find our approach minimizes the boundary artifacts while enabling tokenization and decoding of long and continuous speech.
+
+#### Avoiding Implicit EOSes
+
+We do not train with an end-of-sequence (EOS) token. Despite this, our initial models generated only slightly beyond the training length (e.g., a 4min model reaching $\sim$4.5min before degrading to noise/silence). As we found in non-causal semantic tokenizers like USM-v2, the length of the window can be encoded in the tokens of that window, making ends of training examples look ``different'' and act as implicit EOSes. As evidence, padding the last window to 30s using silence, tokenizing, then dropping the extra tokens did not help, likely because the continuation being silence was also encoded in the kept tokens. What worked was (1) to pad the last window to 30s using speech from the beginning of the example (depicted in \Cref{fig:windowing}a) so that final tokens were tokenized \text{as if} there was further speech, and (2) in the case of LibriLight, to still drop the last 10s of examples -- as the padded beginnings were disproportionately "Chapter \textit{<number>}"!
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
