--- a/Models/SpeechLM/2024.12.24_SpeechSSM.md
+++ b/Models/SpeechLM/2024.12.24_SpeechSSM.md
@@ -200,6 +200,31 @@ We describe our implementations of both in \Cref{sec:proposed-longform}.
 
 ## 4·Experiments: 实验
 
+### Training and Generation
+
+Following \citet{borsos2023audiolm, nachmani2023spoken} and others, we train on the unlab-60k split from LibriLight \citep{kahn2020libri}.
+Unlike prior work, we study the effect of sequence length on long-form generation, segmenting the audiobooks into training sequences of up to one of 30s, 4m (240s), and 16m (960s) in duration.
+For each preprocessed duration, we train a model on 16 TPU v5p chips using only data parallelism for 10k steps, with 768k tokens per batch, and select the best checkpoint using LibriSpeech-Long's dev sets.
+This gives three models: \textbf{SpeechSSM-30s}, \textbf{SpeechSSM-4min}, and SpeechSSM-16min (which we refer to simply as \textbf{SpeechSSM}).
+More training details are in \Cref{sec:further-training}.
+
+At each step, we sample over the full semantic (USM-v2) vocabulary with temperature 1.0.
+For each window of resulting semantic tokens, we use a SoundStorm model to pass to acoustic (SoundStream) tokens, and a SoundStream codec to pass to waveform; see \Cref{sec:further-model-details} for details.
+SoundStorm is speaker-prompted with the acoustic tokens of the first 3 seconds of the prompt to be continued.
+
+### Baselines for Comparison
+
+We compare SpeechSSM with state-of-the-art spoken language models.
+For \textbf{GSLM} \cite{lee2021textless}, we use their best-performing HuBERT-L6 model with 200 token units, trained on the LibriLight-60k dataset.
+For \textbf{TWIST} \cite{hassid2023textually}, we use both the OPT-1.3B and LLaMA-7B versions, trained on 150k speech hours.
+For the 7B \textbf{Spirit LM} \citep{nguyen2024spirit}, we use the \textbf{Expressive} version model which enables expressive speech generation by using pitch and style tokens in addition to semantic HuBERT tokens.
+We also cite numbers from \textbf{AudioLM} \citep{borsos2023audiolm} and \textbf{VoxtLM} \citep{maiti2023voxtlm}, which are both sub-2B models trained on LibriLight-60k.
+VoxtLM and Spirit LM see text data during training.
+
+We note that there is great variation in token, initialization, and training data choices.
+Hence, to make the fairest comparison to SpeechSSM, we construct a Transformer decoder-only model, namely \textbf{SpeechTransformer}, initialized with Gemma-2B\footnote{\citet{botev2024recurrentgemma} note that Gemma-2B was trained with 50\% more tokens than our RecurrentGemma-2B initialization.} \citep{team2024gemma}.
+We only trained 30s and 4min variants, as training a Transformer on 16min sequences was not feasible with the same compute.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
