--- a/Models/SpeechLM/2024.12.24_SpeechSSM.md
+++ b/Models/SpeechLM/2024.12.24_SpeechSSM.md
@@ -228,3 +228,10 @@ We only trained 30s and 4min variants, as training a Transformer on 16min sequen
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
+
+In this work, we considered the task of generative modeling of long-form speech.
+For modeling, this led us to SpeechSSM, the first spoken LM that allows for generation than can go indefinitely without running out of memory.
+For evaluation we created the LibriSpeech-Long benchmark and proposed new evaluations for long-form speech continuation.
+Our analyses show that SpeechSSM matches speech LMs on short horizons while greatly outperforming them and a Transformer baseline on multi-minute generations.
+We hope our work will simplify and enable new audio generation applications involving long-form media, such as audiobooks, podcasts, and video-related content without having to decompose into chunkwise processing out of necessity.
+Future work could apply methods from text-intermediate and joint speech-text models to further improve the semantic quality of SpeechSSM's generations, especially over long contexts.
