--- a/Models/SpeechLM/2024.12.24_SpeechSSM.md
+++ b/Models/SpeechLM/2024.12.24_SpeechSSM.md
@@ -26,7 +26,7 @@
 
 We consider the generative modeling of speech over multiple minutes, a requirement for long-form multimedia generation and audio-native voice assistants.
 However, current spoken language models struggle to generate plausible speech past tens of seconds, from high temporal resolution of speech tokens causing loss of coherence, to architectural issues with long-sequence training or extrapolation, to memory costs at inference time.
-With these considerations we propose SpeechSSM, the first speech language model to learn from and sample long-form spoken audio (e.g., 16 minutes of read or extemporaneous speech) in a single decoding session without text intermediates, based on recent advances in linear-time sequence modeling.
+With these considerations we propose ***SpeechSSM***, the first speech language model to learn from and sample long-form spoken audio (e.g., 16 minutes of read or extemporaneous speech) in a single decoding session without text intermediates, based on recent advances in linear-time sequence modeling.
 Furthermore, to address growing challenges in spoken language evaluation, especially in this new long-form setting, we propose: new embedding-based and LLM-judged metrics; quality measurements over length and time; and a new benchmark for long-form speech processing and generation, LibriSpeech-Long.
 Speech samples and the dataset are released at [this https URL](https://google.github.io/tacotron/publications/speechssm/).
 
@@ -60,9 +60,9 @@ To scale these to long-form evaluation, we introduce the \textbf{LibriSpeech-Lon
 Since original LibriSpeech dev and test sets are segmented into 10s, we reprocess the chapter-level raw audio files into longer 4-minute utterances.
 LibriSpeech-Long enables extended prompts and provides 4-minute reference ground truth, facilitating reference-based evaluation for long-form speech continuation as well as future long-form speech tasks.
 
-We find that SpeechSSM matches existing speech LMs in the short-time horizon, while greatly outperforming their sliding window-based extensions on long-form spoken audio generation (e.g.,  \Cref{fig:transcript}).
+We find that ***SpeechSSM*** matches existing speech LMs in the short-time horizon, while greatly outperforming their sliding window-based extensions on long-form spoken audio generation (e.g.,  \Cref{fig:transcript}).
 Furthermore, we find that our proposed metrics and benchmark help quantify the semantic quality gaps between past work, our work, and human-level speech generation, enabling future model improvements.
-SpeechSSM matches a comparable Transformer while having constant memory consumption and per-token compute.
+***SpeechSSM*** matches a comparable Transformer while having constant memory consumption and per-token compute.
 We release examples at https://google.github.io/tacotron/publications/speechssm/ of read- and extemporaneous-style generations of up to 16 minutes in length and the [LibriSpeech-Long [Github]](https://github.com/google-deepmind/librispeech-long/) evaluation dataset.
 
 ## 2·Related Works: 相关工作
@@ -117,7 +117,7 @@ The first leads us to linear-complexity sequence modeling with a fixed-size stat
 The second leads us to models with aggregation mechanisms such as recurrences or compressive memories.
 We show that with some care, one can also achieve the third requirement of generative extrapolation.
 Finally, beyond these requirements, there is also a practical desire for efficient training (e.g., train-time dependence on sequence length that is subquadratic, to enable longer sequences and reduce reliance on extrapolation), requiring a parallel scheme for weight learning.
-This leads us to state-space models, broadly defined (i.e., including linear recurrence models and certain hybrid variants; \citealp{patro2024mamba360, dao2024transformers}) and thus SpeechSSM, a hybrid state-space speech language model for efficient long-form speech generation that fulfills all these desiderata.
+This leads us to state-space models, broadly defined (i.e., including linear recurrence models and certain hybrid variants; \citealp{patro2024mamba360, dao2024transformers}) and thus ***SpeechSSM***, a hybrid state-space speech language model for efficient long-form speech generation that fulfills all these desiderata.
 Our key design choices are below.
 
 #### Architecture
@@ -125,14 +125,14 @@ Our key design choices are below.
 For our decoder-only hybrid SSM we choose Griffin \cite{de2024griffin}, which interleaves a gated variant of LRUs \cite{orvieto2023-lru} and local (sliding-window) multi-query attention (MQA) blocks in a fixed pattern (two recurrent, one local-MQA; see \Cref{fig:architecture}, left).
 Local attention efficiently captures recent context, while the states of the gated recurrences transmit information across arbitrary distances.
 Griffin's performance matched that of comparable Transformer LMs while significantly improving inference speed and enabling context-side extrapolation of at least 4x longer than seen in training.
-Observing that RoPE \cite{su2024roformer} in the local-MQA blocks still encodes absolute position, we follow recent work on position embeddings (PEs) under causal self-attention (NoPE; \citealp{kazemnejad2024impact}) and remove all explicit PEs from SpeechSSM to promote extrapolation.
+Observing that RoPE \cite{su2024roformer} in the local-MQA blocks still encodes absolute position, we follow recent work on position embeddings (PEs) under causal self-attention (NoPE; \citealp{kazemnejad2024impact}) and remove all explicit PEs from ***SpeechSSM*** to promote extrapolation.
 
 #### Initialization
 
 Inspired by \citet{hassid2023textually}'s success with text-initialized spoken language models (TWIST), we initialize our model with RecurrentGemma-2B IT \cite{botev2024recurrentgemma}, an open-weight LM with the Griffin architecture, trained on 2 trillion text tokens.
 We discard the pretrained text token embeddings and initialize new ones for our audio token vocabulary.
 
-Following \citet{borsos2023audiolm}, we generate low-level acoustic tokens of a neural audio codec, conditioned on semantic tokens output from our SpeechSSM.
+Following \citet{borsos2023audiolm}, we generate low-level acoustic tokens of a neural audio codec, conditioned on semantic tokens output from our ***SpeechSSM***.
 
 #### Semantic Tokenizer
 
@@ -145,7 +145,7 @@ Then, its intermediate embeddings are discretized using vector quantization to g
 
 We use a SoundStorm model \cite{borsos2023soundstorm} trained with USM-v2 conditioning to non-autoregressively generate SoundStream tokens \cite{zeghidour2021soundstream}, a neural audio codec that efficiently reconstructs to high-quality audio.
 It is trained to support 3-second voice prompts (represented as a frozen prefix of semantic and acoustic tokens), such that output acoustic tokens reflect speaker characteristics.
-By choosing a token and model decomposition that isolates speaker characteristics to the acoustic stage, SpeechSSM can focus capacity on modeling semantic coherence along the temporal axis.
+By choosing a token and model decomposition that isolates speaker characteristics to the acoustic stage, ***SpeechSSM*** can focus capacity on modeling semantic coherence along the temporal axis.
 
 #### Windowed Tokenization and Decoding
 
@@ -205,7 +205,7 @@ We describe our implementations of both in \Cref{sec:proposed-longform}.
 Following \citet{borsos2023audiolm, nachmani2023spoken} and others, we train on the unlab-60k split from LibriLight \citep{kahn2020libri}.
 Unlike prior work, we study the effect of sequence length on long-form generation, segmenting the audiobooks into training sequences of up to one of 30s, 4m (240s), and 16m (960s) in duration.
 For each preprocessed duration, we train a model on 16 TPU v5p chips using only data parallelism for 10k steps, with 768k tokens per batch, and select the best checkpoint using LibriSpeech-Long's dev sets.
-This gives three models: \textbf{SpeechSSM-30s}, \textbf{SpeechSSM-4min}, and SpeechSSM-16min (which we refer to simply as \textbf{SpeechSSM}).
+This gives three models: \textbf{SpeechSSM-30s}, \textbf{SpeechSSM-4min}, and ***SpeechSSM***-16min (which we refer to simply as \textbf{SpeechSSM}).
 More training details are in \Cref{sec:further-training}.
 
 At each step, we sample over the full semantic (USM-v2) vocabulary with temperature 1.0.
@@ -214,7 +214,7 @@ SoundStorm is speaker-prompted with the acoustic tokens of the first 3 seconds o
 
 ### Baselines for Comparison
 
-We compare SpeechSSM with state-of-the-art spoken language models.
+We compare ***SpeechSSM*** with state-of-the-art spoken language models.
 For \textbf{GSLM} \cite{lee2021textless}, we use their best-performing HuBERT-L6 model with 200 token units, trained on the LibriLight-60k dataset.
 For \textbf{TWIST} \cite{hassid2023textually}, we use both the OPT-1.3B and LLaMA-7B versions, trained on 150k speech hours.
 For the 7B \textbf{Spirit LM} \citep{nguyen2024spirit}, we use the \textbf{Expressive} version model which enables expressive speech generation by using pitch and style tokens in addition to semantic HuBERT tokens.
@@ -222,12 +222,12 @@ We also cite numbers from \textbf{AudioLM} \citep{borsos2023audiolm} and \textbf
 VoxtLM and Spirit LM see text data during training.
 
 We note that there is great variation in token, initialization, and training data choices.
-Hence, to make the fairest comparison to SpeechSSM, we construct a Transformer decoder-only model, namely \textbf{SpeechTransformer}, initialized with Gemma-2B\footnote{\citet{botev2024recurrentgemma} note that Gemma-2B was trained with 50\% more tokens than our RecurrentGemma-2B initialization.} \citep{team2024gemma}.
+Hence, to make the fairest comparison to ***SpeechSSM***, we construct a Transformer decoder-only model, namely \textbf{SpeechTransformer}, initialized with Gemma-2B\footnote{\citet{botev2024recurrentgemma} note that Gemma-2B was trained with 50\% more tokens than our RecurrentGemma-2B initialization.} \citep{team2024gemma}.
 We only trained 30s and 4min variants, as training a Transformer on 16min sequences was not feasible with the same compute.
 
 ## 5·Short-Form Continuation Experiments
 
-Before we consider the problem of long-form generation, we evaluate how SpeechSSM performs in existing short-form evaluation regimes compared to Transformer-based predecessors.
+Before we consider the problem of long-form generation, we evaluate how ***SpeechSSM*** performs in existing short-form evaluation regimes compared to Transformer-based predecessors.
 As in past work, we take 3s prefixes from LibriSpeech's test-clean set \cite{panayotov2015librispeech} and generate 7s continuations.
 We used test examples with ground-truth continuations $\ge$5s.
 
@@ -264,7 +264,7 @@ We use Gemini 1.5 Pro-002 \cite{team2024gemini} to retranscribe the generated an
 
 ### 5.2·Results & Discussion: Existing Metrics
 
-We see in Table \ref{table:shortform_eval} that SpeechSSM and SpeechTransformer's continuations have highest speaker similarity with the prompt, which we attribute to the choice of having a speaker-promptable acoustic stage; in contrast, GSLM and TWIST can only propagate speaker identity via their semantic tokens (plus coarse style and pitch tokens in Spirit LM Expressive).
+We see in Table \ref{table:shortform_eval} that ***SpeechSSM*** and SpeechTransformer's continuations have highest speaker similarity with the prompt, which we attribute to the choice of having a speaker-promptable acoustic stage; in contrast, GSLM and TWIST can only propagate speaker identity via their semantic tokens (plus coarse style and pitch tokens in Spirit LM Expressive).
 Our N-MOS scores suggest high semantic-to-audio synthesis quality, which we attribute to USM-v2's large vocabulary (32k) and passing to existing acoustic tokens (SoundStream), respectively increasing the expressivity and focusing the capacity of the synthesizing model (SoundStorm).
 SpeechSSM's naturalness is on par or better than a comparable Transformer, and very close to real speech; see samples.
 
@@ -274,7 +274,7 @@ That is, these probing tasks are highly sensitive to vocabulary size, and our wo
 Furthermore, one would expect increased noise with larger vocabulary, as the contrasted spoken words/phrases represent less and less of the probability mass of possible renditions of the underlying text.
 Hence, and for our own reason separate from \citet{defossez2024moshi}'s, we suggest looking beyond these benchmarks and towards transcript-based evaluations, which from this perspective can be seen as \textit{marginalizing} over spoken renditions to get less noisy evaluations.
 
-Finally, SpeechSSMs had the lowest transcript perplexities; however, this is surprising given the other models are larger (7B) and/or have jointly trained with text, and one would not expect SSMs to confer a semantic edge in the $\le$10s speech horizon.
+Finally, ***SpeechSSM***s had the lowest transcript perplexities; however, this is surprising given the other models are larger (7B) and/or have jointly trained with text, and one would not expect SSMs to confer a semantic edge in the $\le$10s speech horizon.
 We note that \citet{lakhotia2021generative} has already caveated -- and \citet{hassid2023textually} has actively discouraged -- the use of ASR PPL given its sensitivity to e.g.\ audio sampling temperature; such metrics may simply indicate model repetitiveness at default settings.
 
 ### 5.3·Results and Discussion: Proposed NLG Metrics
@@ -316,16 +316,16 @@ Our SC scores are the cosine similarities between the embedding of the original 
 ### 6.3·Semantic and Acoustic Results
 
 In Table~\ref{table:longform_eval}, we evaluate 4-minute long-form speech generation using the same speech- and text-based metrics as in short-form evaluation, as well as our proposed MOS-$T$.
-Note that only Spirit LM, SpeechTransformer, and SpeechSSM were trained on sequences on the order of multiple minutes.
+Note that only Spirit LM, SpeechTransformer, and ***SpeechSSM*** were trained on sequences on the order of multiple minutes.
 
-The speaker similarity of SpeechTransformer and SpeechSSM remain high, and have actually increased from 0.79 in the short-form setting (\Cref{table:shortform_eval}) to 0.89, likely from increased confidence over a longer prompt and continuation; the same holds for the ground truth.
+The speaker similarity of SpeechTransformer and ***SpeechSSM*** remain high, and have actually increased from 0.79 in the short-form setting (\Cref{table:shortform_eval}) to 0.89, likely from increased confidence over a longer prompt and continuation; the same holds for the ground truth.
 In contrast, all other models have \textit{decreased} in speaker similarity, likely from speaker divergence over time.
 This shows the advantage of our use of more speaker-invariant USM-v2 tokens and a speaker-prompted semantic-to-audio process, as speaker identity is primarily modulated by the semantic-to-acoustic model rather than consuming capacity and being imperfectly carried by the semantic LM and windowing.
 
-SpeechSSM achieves the best transcript perplexity and wins versus all other models, with roughly the same semantic similarity to the reference as SpeechTransformer.
-Furthermore, the gap between SpeechSSM and the Transformer baseline widens when evaluating on 16min completions (Table~\ref{table:16min_eval}), which \textbf{may even suggest an active edge for SSM-based architectures in long-form modeling} (in line with past work like \citealp{gu2021efficiently}).
+***SpeechSSM*** achieves the best transcript perplexity and wins versus all other models, with roughly the same semantic similarity to the reference as SpeechTransformer.
+Furthermore, the gap between ***SpeechSSM*** and the Transformer baseline widens when evaluating on 16min completions (Table~\ref{table:16min_eval}), which \textbf{may even suggest an active edge for SSM-based architectures in long-form modeling} (in line with past work like \citealp{gu2021efficiently}).
 
-In side-by-side 4-minute evaluation, SpeechSSM wins a majority of the time over all baselines.
+In side-by-side 4-minute evaluation, ***SpeechSSM*** wins a majority of the time over all baselines.
 However, the models achieve effectively zero wins over the ground truth.
 This is likely because as generation length increases, faults in fluency, coherence, logicality and interestingness become increasingly apparent; in all, showing that \textbf{side-by-side comparison versus LibriSpeech-Long ground-truths as a new and difficult benchmark} for (long-form) spoken language generation.
 
@@ -336,19 +336,19 @@ This can be seen explicitly through our proposed stratified metrics.
 We see that MOS-$T$ scores are already low for GSLM and TWIST in the first minute, as they were trained on even shorter sequences.
 Spirit LM, which has seen sequences up to 200s, also degrades in acoustic quality over time, though much slower.
 This can seen as a failure to extrapolate, as Spirit LM trains on interleaved speech and text segments; unbroken strings of 200s of audio are still very rare.
-Qualitatively, we see that Spirit LM has these acoustic/semantic issues, while SpeechSSM generates intelligible and (loosely) coherent speech over the 4min duration.
+Qualitatively, we see that Spirit LM has these acoustic/semantic issues, while ***SpeechSSM*** generates intelligible and (loosely) coherent speech over the 4min duration.
 The earlier Figure \ref{fig:transcript} highlighted this capability, showing ongoing reference to the "Philip" mentioned in the prompt throughout the continuation.
 Other entities like "Prince Maria", "Prince Albert", and "Horace Barrows" also consistently appear, maintaining contextual relevance Our proposed SC-$L$ is plotted for 4 minutes in \Cref{fig:SC-L-4min}, and 16 minutes in \Cref{fig:SC-L-16min}.
 As the generation progresses, semantic similarity with the prompt decreases, as reflected by the gradual decline in ground-truth SC scores; this aligns with the natural flow of speech, where content starts from a topic and gradually diverges over time.
 However, the comparison models exhibit a sharp drop in semantic coherence (SC) scores around 200 words (approx.
 1min, which is around their training lengths) and plateaus thereafter.
-In contrast, SpeechSSM maintains high SC further into the generation, closest to the ground truth where available, i.e., in the 4 min case.
+In contrast, ***SpeechSSM*** maintains high SC further into the generation, closest to the ground truth where available, i.e., in the 4 min case.
 
-\textbf{SpeechSSM generalizes best past training.} In the 16min results (\Cref{table:16min_eval}, \Cref{fig:SC-L-16min}), we see no significant performance drop when SpeechSSM-4m undergoes 16min evaluations, i.e., generates beyond its training length.
-As an additional check, we computed the average number of words generated by SpeechSSM-4m and SpeechSSM to be 3k and 2.9k respectively.
-In contrast, SpeechTransformer initially achieves higher SC scores up to its training length of 4m but noticeably declines afterwards, falling below SpeechSSM.
-In all, these demonstrate that SpeechSSM's design and architecture lead to continuing performance during extrapolative generation.
-See our demo page for 16min generations by the SpeechSSM-4min model.
+\textbf{***SpeechSSM*** generalizes best past training.} In the 16min results (\Cref{table:16min_eval}, \Cref{fig:SC-L-16min}), we see no significant performance drop when ***SpeechSSM***-4m undergoes 16min evaluations, i.e., generates beyond its training length.
+As an additional check, we computed the average number of words generated by ***SpeechSSM***-4m and ***SpeechSSM*** to be 3k and 2.9k respectively.
+In contrast, SpeechTransformer initially achieves higher SC scores up to its training length of 4m but noticeably declines afterwards, falling below ***SpeechSSM***.
+In all, these demonstrate that ***SpeechSSM***'s design and architecture lead to continuing performance during extrapolative generation.
+See our demo page for 16min generations by the ***SpeechSSM***-4min model.
 
 ### 6.5·Sampling Efficiency
 
@@ -356,27 +356,27 @@ We evaluate sampling efficiency in terms of throughput and latency.
 Throughput measures the maximum number of tokens that can be successfully decoded per second given fixed memory, e.g.
 by increasing the batch size, while latency measures the time it takes to decode to a fixed sample length.
 
-In \Cref{fig:throughput}, we see that SpeechSSM attains higher throughput due to its recurrent layers that maintain a constant-size state, unlike self-attention layers that must attend to all previously generated tokens as decoding proceeds.
+In \Cref{fig:throughput}, we see that ***SpeechSSM*** attains higher throughput due to its recurrent layers that maintain a constant-size state, unlike self-attention layers that must attend to all previously generated tokens as decoding proceeds.
 As sample lengths increase, so does the memory use of self-attention, decreasing the maximum batch size and hence the throughput of both systems.
-However, SpeechSSM's throughput remains constant and does not decrease as its self-attention is bounded to a sliding window of size 2048, confirming its bounded memory use and thus its capability of unbounded speech generation.
-This advantage becomes clear when compared in a relative scale; see \Cref{fig:throughput_speedup}, which shows that SpeechSSM can attain >120x the throughput of SpeechTransformer if decoding 16k-token sequences in batch.
+However, ***SpeechSSM***'s throughput remains constant and does not decrease as its self-attention is bounded to a sliding window of size 2048, confirming its bounded memory use and thus its capability of unbounded speech generation.
+This advantage becomes clear when compared in a relative scale; see \Cref{fig:throughput_speedup}, which shows that ***SpeechSSM*** can attain >120x the throughput of SpeechTransformer if decoding 16k-token sequences in batch.
 
 In \Cref{fig:latency}, we see the time taken to decode a single generation based on sample length.
-Given the relative speedup shown here, we conclude that SpeechSSM's higher throughput is not just from enabling higher batch sizes, but also from its increased speed per step.
-On the TPU v5e, the 2B SpeechSSM decodes 16384 tokens (roughly 10.9 minutes) in just over 100 seconds, a real-time factor well under 0.2x.
+Given the relative speedup shown here, we conclude that ***SpeechSSM***'s higher throughput is not just from enabling higher batch sizes, but also from its increased speed per step.
+On the TPU v5e, the 2B ***SpeechSSM*** decodes 16384 tokens (roughly 10.9 minutes) in just over 100 seconds, a real-time factor well under 0.2x.
 
 ### 6.6·Extemporaneous Speech Generation
 
 With few exceptions (dGSLM, Spirit LM Expressive), most spoken LMs are trained on read speech such as LibriLight.
 However, long-form multimedia and assistant applications likely require modeling of spontaneous speech, which has its own long-term discourse structures (e.g., podcasts; \citealp{nishimura2024halle}).
-Hence, we also developed \textbf{SpeechSSM-X}, a 2B SpeechSSM model trained on a 216k-hour corpus of eXtemporaneous monologues (see \Cref{sec:speechssm-x-details} for details).
+Hence, we also developed \textbf{SpeechSSM-X}, a 2B ***SpeechSSM*** model trained on a 216k-hour corpus of eXtemporaneous monologues (see \Cref{sec:speechssm-x-details} for details).
 We find that it is able to generate natural monologue speech in a more informal, extemporaneous style, while showing similar coherence at the multi-sentence level; see our website for examples.
 
 ## 7·Conclusions: 结论
 
 In this work, we considered the task of generative modeling of long-form speech.
-For modeling, this led us to SpeechSSM, the first spoken LM that allows for generation than can go indefinitely without running out of memory.
+For modeling, this led us to ***SpeechSSM***, the first spoken LM that allows for generation than can go indefinitely without running out of memory.
 For evaluation we created the LibriSpeech-Long benchmark and proposed new evaluations for long-form speech continuation.
-Our analyses show that SpeechSSM matches speech LMs on short horizons while greatly outperforming them and a Transformer baseline on multi-minute generations.
+Our analyses show that ***SpeechSSM*** matches speech LMs on short horizons while greatly outperforming them and a Transformer baseline on multi-minute generations.
 We hope our work will simplify and enable new audio generation applications involving long-form media, such as audiobooks, podcasts, and video-related content without having to decompose into chunkwise processing out of necessity.
-Future work could apply methods from text-intermediate and joint speech-text models to further improve the semantic quality of SpeechSSM's generations, especially over long contexts.
+Future work could apply methods from text-intermediate and joint speech-text models to further improve the semantic quality of ***SpeechSSM***'s generations, especially over long contexts.
