--- a/Models/Acoustic/2018.09.19_TransformerTTS.md
+++ b/Models/Acoustic/2018.09.19_TransformerTTS.md
@@ -41,7 +41,7 @@ For the performance, rigorous human tests show that our proposed model achieves 
 
 ## 3·Methodology: 方法
 
-![](../TTS2_Acoustic/Images/2018.09.19.TransformerTTS.Fig.03.jpg)
+![](Images/2018.09.19_TransformerTTS_Fig.03.jpg)
 
 ## 4·Experiments: 实验
 
