--- a/Models/Diffusion/2024.04.23_FlashSpeech.md
+++ b/Models/Diffusion/2024.04.23_FlashSpeech.md
@@ -154,9 +154,9 @@ Remarkably, it achieves this at a speed approximately 20 times faster than compa
 <summary>原文</summary>
 
 Motivated by the success of the large language model, the speech research community has recently shown increasing interest in scaling the sizes of model and training data to bolster generalization capabilities, producing natural speech with diverse speaker identities and prosody under zero-shot settings.
-The pioneering work is [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), which adopts the [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) to discretize the audio waveform into tokens.
+The pioneering work is [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), which adopts the [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) to discretize the audio waveform into tokens.
 Therefore, a language model can be trained via in-context learning that can generate the target utterance where the style is consistent with prompt utterance.
-However, generating audio in such an autoregressive manner ([LM-VC (2023)](); [VoiceCraft (2024)](../SpeechLM/2024.03.25_VoiceCraft.md) can lead to unstable prosody, word skipping, and repeating issues ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); Tan et al.(2021); [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md))
+However, generating audio in such an autoregressive manner ([LM-VC (2023)](); [VoiceCraft (2024)](../SpeechLM/2024.03.25_VoiceCraft.md)) can lead to unstable prosody, word skipping, and repeating issues ([FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md); Tan et al.(2021); [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md))
 To ensure the robustness of the system, non-autoregressive methods such as [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md) and [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md) utilize diffusion-style model (VP-diffusion Song et al.(2020) or [Flow-Matching (2022)](2022.10.06_Flow_Matching.md)) to learn the distribution of a continuous intermediate vector such as mel-spectrogram or latent vector of codec.
 Both LM-based methods Zhao et al.(2023) and diffusion-based methods show superior performance in speech generation tasks.
 However, their generation is slow due to the iterative computation.
@@ -173,7 +173,7 @@ Considering that many speech generation scenarios require real-time inference an
 <summary>原文</summary>
 
 Since early neural speech generation models Tan et al.(2021) use autoregressive models such as Tacotron Wang et al.(2017) and TransformerTTS Li et al.(2019), causing slow inference speed, with $\mathcal{O}(n)$ computation, whereNis the sequence length.
-To address the slow inference speed, [FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md), [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) proposes to generate a mel-spectrogram in a non-autoregressive manner.
+To address the slow inference speed, [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md), [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md) proposes to generate a mel-spectrogram in a non-autoregressive manner.
 However, these models Ren et al.(2022) result in blurred and over-smoothed mel-spectrograms due to the regression loss they used and the capability of modeling methods.
 To further enhance the speech quality, diffusion models are utilized Popov et al.(2021a); Jeong et al.(2021); Popov et al.(2021b) which increase the computation to $\mathcal{O}(T)$, where $T$ is the diffusion steps.
 Therefore, distillation techniques Luo (2023) for diffusion-based methods such as CoMoSpeech Ye et al.(2023), CoMoSVC Lu et al.(2024) and Reflow-TTS Guan et al.(2023) emerge to reduce the sampling steps back to $\mathcal{O}(1)$, but require additional pre-trained diffusion as the teacher model.
@@ -311,12 +311,11 @@ Our training procedure is outlined in Fig.03, which has three parts:
 
 #### 3.4.1.Analysis of Prosody Prediction
 
-Previous regression methods for prosody prediction ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md)), due to their deterministic mappings and assumptions of unimodal distribution, often fail to capture the inherent diversity and expressiveness of human speech prosody.
+Previous regression methods for prosody prediction ([FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md); [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md)), due to their deterministic mappings and assumptions of unimodal distribution, often fail to capture the inherent diversity and expressiveness of human speech prosody.
 This leads to predictions that lack variation and can appear over-smoothed.
 On the other hand, diffusion methods ([Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md); Li et al.(2023)) for prosody prediction offer a promising alternative by providing greater prosody diversity.
 However, they come with challenges regarding stability, and the potential for unnatural prosody.
-Additionally, the iterative inference process in DMs requires a significant number of sampling steps that may also hinder real-time appli
-cation.
+Additionally, the iterative inference process in DMs requires a significant number of sampling steps that may also hinder real-time application.
 Meanwhile, LM-based methods ([Mega-TTS2](../SpeechLM/2023.07.14_Mega-TTS2.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)) also need a long time for inference.
 To alleviate these issues, our prosody generator consists of a prosody regression module and a prosody refinement module to enhance the diversity of prosody regression results with efficient one-step consistency model sampling.
 
@@ -385,7 +384,7 @@ We use the English subset of Multilingual LibriSpeech (MLS) Pratap et al.(2020),
 The audio data is resampled at a frequency of 16kHz.
 The input text is transformed into a sequence of phonemes through grapheme-to-phoneme conversion Sun et al.(2019) and then we use our internal alignment tool aligned with speech to obtain the phoneme-level duration.
 We adopt a hop size of 200 for all frame-level features.
-The pitch sequence is extracted using PyWorld2. we adopt [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) as our audio codec.
+The pitch sequence is extracted using PyWorld2. we adopt [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) as our audio codec.
 We use a modified version3and train it on MLS.
 We use the dense features extracted before the residual quantization layer as our latent vector z.
 
@@ -410,7 +409,7 @@ During training, only the weight of the prosody refinement part is updated.
 The model structures of the prompt encoder and phoneme encoder are follow [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md).
 The neural function part in [LCM](2023.10.06_LCM.md) is almost the same as the [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md).
 We rescale the sinusoidal position embedding in the neural function part by a factor of 1000.
-As for the prosody generator, we adopt 30 non-casual [WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md) layers for the neural function part in the prosody refinement module and the same configurations for prosody regression parts in [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md).
+As for the prosody generator, we adopt 30 non-casual [WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md) layers for the neural function part in the prosody refinement module and the same configurations for prosody regression parts in [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md).
 And we set $\alpha= 0.2$ for the prosody refinement module empirically.
 For the discriminator’s head, we stack 5 convolutional layers with weight normalization Salimans and Kingma (2016) for binary classification.
 
