--- a/Models/Diffusion/2024.09.14_E1_TTS.md
+++ b/Models/Diffusion/2024.09.14_E1_TTS.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "Title"
+- 标题: "E1 TTS: Simple and Fast Non-Autoregressive TTS"
 - 作者:
   - 01 Zhijun Liu,
   - 02 Shuai Wang,
@@ -29,7 +29,7 @@ The inference of E1 TTS is efficient, requiring only one neural network evaluati
 Despite its sampling efficiency, E1 TTS achieves naturalness and speaker similarity comparable to various strong baseline models.
 Audio samples are available at https://e1tts.github.io/.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Non-autoregressive (NAR) text-to-speech (TTS) models \cite{TTSSurvey} generate speech from text in parallel, synthesizing all speech units simultaneously.
 This enables faster inference compared to autoregressive (AR) models, which generate speech one unit at a time.
@@ -51,12 +51,12 @@ Compared to ODE trajectory-based methods, the student model can match or even ou
 In this work, we distill a diffusion-based ID-NAR TTS model into a one-step generator with recently proposed distribution matching distillation~\cite{DiffInstruct,DMD2} method.
 The distilled model demonstrates better robustness after distillation, and it achieves comparable performance to several strong AR and NAR baseline systems.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
